ajout deffet de survols

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- HEADER -->
 
         <div>
-            <h1 class="titre">Trouver votre hébergement pour des vacances de reve</h1>
+            <h1 class="titre">Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
 
            
@@ -36,7 +36,7 @@
             <div class="recherche">
                 <i class="fas fa-map-marker-alt searchFormWrapiconIcon"></i>
                 <input type="search" placeholder="Marseille, France">
-                <button class="searchFormSubmitinputIcon fas fa-search">Rechercher</button>
+                <button class="searchFormSubmitinputIcon fas fa-search"><span id="search">Rechercher</span></button>
             </div>
 
             
@@ -76,7 +76,7 @@
 
             <div class="information">
             <i class="fas fa-info searchResultWrapiconIcon"></i>
-            <p class="text">Plus de 500 logements ssont disponibles dans cette ville</p>
+            <p class="text">Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
 
         </div>
