correction des bordures du block2

--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
                         <figcaption>Fort de Pomègues</figcaption>
                    </figure>
 
-                    <figure>
+                    <figure >
                         <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="object" id="object3" alt="">
-                        <figcaption>iles du Frioul</figcaption>
+                        <figcaption class="frioul">Iles du Frioul</figcaption>
                     </figure>
                 </figure>
 
