--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/bcf24e2998.js" crossorigin="anonymous"></script>
 </head>
 
-<body> <!-- balises sémantique (sections nav , articles) -->
+<body>
 
     <div id="marge">
         <!-- HEADER -->
